--- a/proyecto_front/src/components/empleados/empleados.css
+++ b/proyecto_front/src/components/empleados/empleados.css
@@ -1,3 +1,7 @@
 #empleados-buscar-container{
     margin-top: 150px;
 }
+.react-bs-table-sizePerPage-dropdown .dropdown-toggle{
+    float: left;
+    margin-bottom: 20px;
+}
