--- a/proyecto_front/src/components/empleados/empleados.css
+++ b/proyecto_front/src/components/empleados/empleados.css
@@ -1,14 +1,30 @@
-#empleados-buscar-container{
-    margin-top: 150px;
+#empleados-buscar-container,
+#empleados-crear-container
+{
+    margin-top: 50px;
 }
+
+#empleados-container
+{
+    margin-top: 130px;
+}
+
+#empleados-crear-container .form-label{
+    float: left;
+    margin-top: 10px;
+}
+
+
 .react-bs-table-sizePerPage-dropdown .dropdown-toggle{
     float: left;
     margin-bottom: 20px;
 }
+
 .search-Label {
     float: right;
     padding-bottom: 10px;
 }
+
 .sr-only {
     font-size: 0;
 }
